nobase_include_HEADERS = \
        cxxtools/allocator.h \
        cxxtools/application.h \
        cxxtools/arg.h \
        cxxtools/argin.h \
        cxxtools/argout.h \
        cxxtools/atomicity.h \
        cxxtools/api.h \
        cxxtools/base64codec.h \
        cxxtools/base64stream.h \
        cxxtools/bin/formatter.h \
        cxxtools/bin/serializer.h \
        cxxtools/bin/deserializer.h \
        cxxtools/bin/rpcclient.h \
        cxxtools/bin/rpcserver.h \
        cxxtools/bin/valueparser.h \
        cxxtools/byteorder.h \
        cxxtools/cache.h \
        cxxtools/callable.h \
        cxxtools/callable.tpp \
        cxxtools/composer.h \
        cxxtools/csvdeserializer.h \
        cxxtools/csvformatter.h \
        cxxtools/csvserializer.h \
        cxxtools/char.h \
        cxxtools/cgi.h \
        cxxtools/clock.h \
        cxxtools/condition.h \
        cxxtools/connectable.h \
        cxxtools/connection.h \
        cxxtools/constmethod.h \
        cxxtools/constmethod.tpp \
        cxxtools/conversionerror.h \
        cxxtools/convert.h \
        cxxtools/date.h\
        cxxtools/datetime.h \
        cxxtools/decomposer.h \
        cxxtools/delegate.h \
        cxxtools/delegate.tpp \
        cxxtools/deserializer.h \
        cxxtools/dir.h \
        cxxtools/directory.h \
        cxxtools/dlloader.h \
        cxxtools/event.h \
        cxxtools/eventloop.h \
        cxxtools/eventsink.h \
        cxxtools/eventsource.h \
        cxxtools/facets.h \
        cxxtools/fdstream.h \
        cxxtools/formatter.h \
        cxxtools/file.h \
        cxxtools/fileinfo.h \
        cxxtools/function.h \
        cxxtools/function.tpp \
        cxxtools/hdstream.h \
        cxxtools/hmac.h \
        cxxtools/http/api.h \
        cxxtools/http/client.h \
        cxxtools/http/messageheader.h \
        cxxtools/http/reply.h \
        cxxtools/http/replyheader.h \
        cxxtools/http/request.h \
        cxxtools/http/requestheader.h \
        cxxtools/http/server.h \
        cxxtools/http/service.h \
        cxxtools/http/responder.h \
        cxxtools/inifile.h \
        cxxtools/iniparser.h \
        cxxtools/invokable.h \
        cxxtools/invokable.tpp \
        cxxtools/ioerror.h \
        cxxtools/iodevice.h \
        cxxtools/iostream.h \
        cxxtools/join.h \
        cxxtools/jsondeserializer.h \
        cxxtools/jsonparser.h \
        cxxtools/jsonserializer.h \
        cxxtools/library.h \
        cxxtools/log.h \
        cxxtools/loginit.h \
        cxxtools/main.h \
        cxxtools/md5.h \
        cxxtools/md5stream.h \
        cxxtools/membar.gcc.h \
        cxxtools/membar.gcc.nosmp.h \
        cxxtools/membar.h \
        cxxtools/method.h \
        cxxtools/method.tpp \
        cxxtools/mime.h \
        cxxtools/multifstream.h \
        cxxtools/mutex.h \
        cxxtools/net/addrinfo.h \
        cxxtools/net/net.h \
        cxxtools/net/tcpserver.h \
        cxxtools/net/tcpsocket.h \
        cxxtools/net/tcpstream.h \
        cxxtools/net/udp.h \
        cxxtools/net/udpstream.h \
        cxxtools/net/uri.h \
        cxxtools/noncopyable.h \
        cxxtools/pipe.h \
        cxxtools/pool.h \
        cxxtools/posix/commandinput.h \
        cxxtools/posix/commandoutput.h \
        cxxtools/posix/exec.h \
        cxxtools/posix/fork.h \
        cxxtools/posix/pipe.h \
        cxxtools/posix/pipestream.h \
        cxxtools/properties.h \
        cxxtools/query_params.h \
        cxxtools/queue.h \
        cxxtools/quotedprintablestream.h \
        cxxtools/refcounted.h \
        cxxtools/regex.h \
        cxxtools/remoteclient.h \
        cxxtools/remoteexception.h \
        cxxtools/remoteprocedure.h \
        cxxtools/remoteresult.h \
        cxxtools/selector.h \
        cxxtools/selectable.h \
        cxxtools/semaphore.h \
        cxxtools/serializationerror.h \
        cxxtools/serializationinfo.h \
        cxxtools/serviceprocedure.h \
        cxxtools/settings.h \
        cxxtools/split.h \
        cxxtools/signal.h \
        cxxtools/signal.tpp \
        cxxtools/singleton.h \
        cxxtools/slot.h \
        cxxtools/slot.tpp \
        cxxtools/smartptr.h \
        cxxtools/sourceinfo.h \
        cxxtools/streambuffer.h \
        cxxtools/streamcounter.h \
        cxxtools/string.h \
        cxxtools/string.tpp \
        cxxtools/stringstream.h \
        cxxtools/systemerror.h \
        cxxtools/tee.h \
        cxxtools/textbuffer.h \
        cxxtools/textcodec.h \
        cxxtools/textstream.h \
        cxxtools/thread.h \
        cxxtools/threadpool.h \
        cxxtools/time.h \
        cxxtools/timer.h \
        cxxtools/timespan.h \
        cxxtools/trim.h \
        cxxtools/typetraits.h \
        cxxtools/types.h \
        cxxtools/utf8codec.h \
        cxxtools/uuencode.h \
        cxxtools/void.h \
        cxxtools/xmltag.h \
        cxxtools/log/cxxtools.h \
        cxxtools/log/cxxtools_init.h \
        cxxtools/log/disable.h \
        cxxtools/log/disable_init.h \
        cxxtools/log/log4cplus.h \
        cxxtools/log/log4cplus_init.h \
        cxxtools/log/log4cxx.h \
        cxxtools/log/log4cxx_init.h \
        cxxtools/unit/application.h \
        cxxtools/unit/assertion.h \
        cxxtools/unit/registertest.h \
        cxxtools/unit/reporter.h \
        cxxtools/unit/test.h \
        cxxtools/unit/testcase.h \
        cxxtools/unit/testcontext.h \
        cxxtools/unit/testfixture.h \
        cxxtools/unit/testmain.h \
        cxxtools/unit/testmethod.h \
        cxxtools/unit/testprotocol.h \
        cxxtools/unit/testsuite.h \
        cxxtools/xml/api.h \
        cxxtools/xml/characters.h \
        cxxtools/xml/comment.h \
        cxxtools/xml/doctypedeclaration.h \
        cxxtools/xml/enddocument.h \
        cxxtools/xml/endelement.h \
        cxxtools/xml/entityresolver.h \
        cxxtools/xml/namespace.h \
        cxxtools/xml/namespacecontext.h \
        cxxtools/xml/node.h \
        cxxtools/xml/processinginstruction.h \
        cxxtools/xml/startelement.h \
        cxxtools/xml/xmlerror.h \
        cxxtools/xml/xmlformatter.h \
        cxxtools/xml/xmldeserializer.h \
        cxxtools/xml/xmlreader.h \
        cxxtools/xml/xmlserializer.h \
        cxxtools/xml/xmlwriter.h \
        cxxtools/xmlrpc/api.h \
        cxxtools/xmlrpc/client.h \
        cxxtools/xmlrpc/errorcodes.h \
        cxxtools/xmlrpc/httpclient.h \
        cxxtools/xmlrpc/formatter.h \
        cxxtools/xmlrpc/responder.h \
        cxxtools/xmlrpc/scanner.h \
        cxxtools/xmlrpc/service.h

nobase_nodist_include_HEADERS = \
        cxxtools/config.h

if MAKE_ICONVSTREAM
nobase_include_HEADERS += \
        cxxtools/iconverter.h \
        cxxtools/iconvstream.h
endif

if MAKE_ATOMICITY_SUN
nobase_include_HEADERS += \
        cxxtools/membar.sun.h \
        cxxtools/atomicity.sun.h
endif

if MAKE_ATOMICITY_WINDOWS
nobase_include_HEADERS += \
        cxxtools/membar.windows.h \
        cxxtools/atomicity.windows.h
endif

if MAKE_ATOMICITY_GCC_ARM
nobase_include_HEADERS += \
        cxxtools/membar.gcc.arm.h \
        cxxtools/atomicity.gcc.arm.h
endif

if MAKE_ATOMICITY_GCC_MIPS
nobase_include_HEADERS += \
        cxxtools/membar.gcc.mips.h \
        cxxtools/atomicity.gcc.mips.h
endif

if MAKE_ATOMICITY_GCC_PPC
nobase_include_HEADERS += \
        cxxtools/membar.gcc.ppc.h \
        cxxtools/atomicity.gcc.ppc.h
endif

if MAKE_ATOMICITY_GCC_X86_64
nobase_include_HEADERS += \
        cxxtools/membar.gcc.x86.h \
        cxxtools/atomicity.gcc.x86_64.h
endif

if MAKE_ATOMICITY_GCC_X86
nobase_include_HEADERS += \
        cxxtools/membar.gcc.x86.h \
        cxxtools/atomicity.gcc.x86.h
endif

if MAKE_ATOMICITY_GCC_SPARC32
nobase_include_HEADERS += \
        cxxtools/membar.gcc.sparc32.h \
        cxxtools/atomicity.gcc.sparc32.h
endif

if MAKE_ATOMICITY_GCC_SPARC64
nobase_include_HEADERS += \
        cxxtools/membar.gcc.sparc64.h \
        cxxtools/atomicity.gcc.sparc64.h
endif

if MAKE_ATOMICITY_GCC_AVR32
nobase_include_HEADERS += \
        cxxtools/atomicity.gcc.avr32.h
endif

if MAKE_ATOMICITY_PTHREAD
nobase_include_HEADERS += \
        cxxtools/atomicity.pthread.h
endif

if MAKE_ATOMICITY_GENERIC
nobase_include_HEADERS += \
        cxxtools/atomicity.generic.h
endif

